[package]
name = "cryptio"
version = "0.1.0"
edition = "2021"

[dependencies]
crypter = { path = "../crypter" }
embedded-io = { path = "../embedded-io" }
hasher = { git = "https://github.com/lemosyne/hasher.git" }
hex = "0.4.3"
khf = { path = "../khf" }
kms = { path = "../kms" }
rand = "0.8.5"

[dev-dependencies]
anyhow = "1.0.71"
crypter = { path = "../crypter" }
embedded-io = { path = "../embedded-io", features = ["std"] }
hasher = { git = "https://github.com/lemosyne/hasher.git", features = ["openssl"] }
path_macro = "1.0.0"
rand = "0.8.5"
tempfile = { git = "https://github.com/lemosyne/tempfile.git" }
